--- a/src/assets/css/Main/Index.module.css
+++ b/src/assets/css/Main/Index.module.css
@@ -101,6 +101,7 @@ html, body {
 .sec03 {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100vh;
     z-index: 100;
@@ -115,6 +116,7 @@ html, body {
     position: relative;
     left: 0; 
     right: 0;
+    margin-right: 100px;
 }
 
 .bgWrapper3 img{
@@ -136,7 +138,36 @@ html, body {
     margin-top: 113px;
 }
 
+.ai_description {
+    width: 65%;
+    padding: 30px;
+    background: rgba(255, 255, 255, 0.8); /* 반투명 배경 */
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    transform: translateY(50px);
+    opacity: 0;
+    transition: all 3.5s ease-in-out;
+    margin-left: 300px;
+}
 
+/* sec03 중앙에서 애니메이션 효과 적용 */
+.sec03 .showAI {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.ai_description h2 {
+    font-size: 2rem;
+    color: #37489e;
+    text-align: center;
+}
+
+.ai_description p {
+    font-size: 1.2rem;
+    color: #333;
+    text-align: center;
+    line-height: 1.5;
+}
 
 
 /* --------------------------- */
